# fisher-test-python

./: README.md  requirements-test.txt  setup.cfg  setup.py
fisher/: __init__.py  fisher.py
fisher/src/: asa159.c  fisher.c
tests/: test_rpy2.py
