[metadata]
name = fisher-test-python
version = 0.1.0
description = Fisher exact test for python
author = Linewalks
author_email = jungwoo@linewalks.com
url = https://github.com/linewalks/fisher-test-python
license = LGPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

# [options.packages.find]
# where = 
#     .fisher_test
#     fisher_test.*
