[metadata]
name = fisher-test-python
version = 0.2.7
description = Fisher exact test for python
author = kakaohealthcare
author_email = sector.rest@kakaohealthcare.com
url = https://github.com/kakaohealthcare/fisher-test-python
license = LGPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
